[gd_scene load_steps=49 format=3 uid="uid://cuxgws43sf46t"]

[ext_resource type="Texture2D" uid="uid://x83o0romu2eg" path="res://nubertspin.png" id="1_o6i62"]
[ext_resource type="Script" path="res://gameover.gd" id="1_sa2b1"]
[ext_resource type="AudioStream" uid="uid://bbwoaohw4vsgq" path="res://music/game over.mp3" id="3_6rr1y"]
[ext_resource type="Texture2D" uid="uid://bn8lr3dgq0krs" path="res://Nubert/Nubert.png" id="4_ql52o"]
[ext_resource type="Texture2D" uid="uid://bhkyuoc726us1" path="res://Mousemillian/maus.png" id="5_83b8i"]
[ext_resource type="FontFile" uid="uid://xnoiqrv5csl0" path="res://Determination/DTM-Mono.otf" id="5_mpcdv"]
[ext_resource type="Texture2D" uid="uid://da4l2s4yy85d2" path="res://Nubert/Nubert3.png" id="5_revc6"]
[ext_resource type="Texture2D" uid="uid://cn37qt5364vjp" path="res://Nubert/Nubert2.png" id="6_iunxu"]
[ext_resource type="AudioStream" uid="uid://cpoi4hmenadua" path="res://Nubert/sfx/undertale-text.mp3" id="8_6gwty"]
[ext_resource type="AudioStream" uid="uid://nsrfo6b873gb" path="res://Nubert/sfx/Deltarune Chapter 2 OST - WELCOME TO THE CITY -Alt-.mp3" id="9_hn6vm"]

[sub_resource type="Animation" id="Animation_04psa"]
resource_name = "begin"
length = 10.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GAMEOVER/HP1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(45, 40), Vector2(55, 0), Vector2(65, 1000)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GAMEOVER/HP1")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [&"default", 1.0, false],
"method": &"play"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("GAMEOVER/Music")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0],
"method": &"play"
}]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("GAMEOVER/AnimatedSprite2D")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(8),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [&"left", 1.0, false],
"method": &"play"
}]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("GAMEOVER/AnimatedSprite2D:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(1, 2.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("GAMEOVER/Label2:text")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 6.8, 6.9, 7, 7.1, 7.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": ["               ", "               R", "               Re", "               Ret", "               Retr", "               Retry"]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("GAMEOVER/Label3:text")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 7.4, 7.5, 7.6, 7.7, 7.9, 8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": ["               ", "G                     ", "Gi                    ", "Giv                   ", "Give                  ", "Give u                ", "Give up               "]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("GAMEOVER/Label2:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0.1, 8, 8.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 0.952941, 1, 1), Color(1, 1, 1, 1), Color(1, 0.991176, 0.1875, 1)]
}
tracks/8/type = "method"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("GAMEOVER/AnimatedSprite2D")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(8),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [&"left", 1.0, false],
"method": &"play"
}]
}
tracks/9/type = "method"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("GAMEOVER/Timer")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [-1],
"method": &"start"
}]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("GAMEOVER/Label:text")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [""]
}

[sub_resource type="Animation" id="Animation_wuocl"]
resource_name = "giveup"
length = 4.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GAMEOVER/Label2:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["               "]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GAMEOVER/Label3:text")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["               "]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("GAMEOVER/AnimatedSprite2D")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"values": []
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("GAMEOVER/AnimatedSprite2D:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 4.4, 4.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("GAMEOVER/Music")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"stop"
}]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("GAMEOVER/Music2")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(4.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0],
"method": &"play"
}]
}
tracks/6/type = "method"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("GAMEOVER/AnimatedSprite2D")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(4.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [&"end", 1.0, false],
"method": &"play"
}]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("GAMEOVER/Label:text")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 4.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": ["     ", ""]
}
tracks/8/type = "method"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("GAMEOVER/Timer")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [-1],
"method": &"start"
}]
}

[sub_resource type="Animation" id="Animation_w6nvx"]
resource_name = "retry"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GAMEOVER/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GAMEOVER")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"retry"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("GAMEOVER/Music")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"stop"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_77dto"]
_data = {
"begin": SubResource("Animation_04psa"),
"giveup": SubResource("Animation_wuocl"),
"retry": SubResource("Animation_w6nvx")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_5sm2r"]
atlas = ExtResource("1_o6i62")
region = Rect2(0, 0, 220, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_t02xk"]
atlas = ExtResource("1_o6i62")
region = Rect2(220, 0, 220, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbx17"]
atlas = ExtResource("1_o6i62")
region = Rect2(440, 0, 220, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_0tn7x"]
atlas = ExtResource("1_o6i62")
region = Rect2(660, 0, 220, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_afbh1"]
atlas = ExtResource("1_o6i62")
region = Rect2(880, 0, 220, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_7cl75"]
atlas = ExtResource("1_o6i62")
region = Rect2(0, 200, 220, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_kur8u"]
atlas = ExtResource("1_o6i62")
region = Rect2(220, 200, 220, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_okjhf"]
atlas = ExtResource("1_o6i62")
region = Rect2(440, 200, 220, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_avo67"]
atlas = ExtResource("1_o6i62")
region = Rect2(660, 200, 220, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_n4k34"]
atlas = ExtResource("1_o6i62")
region = Rect2(880, 200, 220, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_te4pc"]
atlas = ExtResource("1_o6i62")
region = Rect2(0, 400, 220, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_8wt2j"]
atlas = ExtResource("1_o6i62")
region = Rect2(220, 400, 220, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_pctlv"]
atlas = ExtResource("1_o6i62")
region = Rect2(440, 400, 220, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_q2x8f"]
atlas = ExtResource("1_o6i62")
region = Rect2(660, 400, 220, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_jpqr7"]
atlas = ExtResource("1_o6i62")
region = Rect2(880, 400, 220, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_v5h2w"]
atlas = ExtResource("1_o6i62")
region = Rect2(0, 600, 220, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_5cumr"]
atlas = ExtResource("1_o6i62")
region = Rect2(220, 600, 220, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_g8hvo"]
atlas = ExtResource("1_o6i62")
region = Rect2(440, 600, 220, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_tivwv"]
atlas = ExtResource("1_o6i62")
region = Rect2(660, 600, 220, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_j77wl"]
atlas = ExtResource("1_o6i62")
region = Rect2(880, 600, 220, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_gr21a"]
atlas = ExtResource("1_o6i62")
region = Rect2(0, 800, 220, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_wfuai"]
atlas = ExtResource("1_o6i62")
region = Rect2(220, 800, 220, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_uu4sd"]
atlas = ExtResource("1_o6i62")
region = Rect2(440, 800, 220, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_idkvn"]
atlas = ExtResource("1_o6i62")
region = Rect2(660, 800, 220, 200)

[sub_resource type="SpriteFrames" id="SpriteFrames_b4x3l"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5sm2r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t02xk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbx17")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0tn7x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_afbh1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7cl75")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kur8u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_okjhf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_avo67")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n4k34")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_te4pc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8wt2j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pctlv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q2x8f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jpqr7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v5h2w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5cumr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g8hvo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tivwv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j77wl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gr21a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wfuai")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uu4sd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_idkvn")
}],
"loop": true,
"name": &"default",
"speed": 20.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_iyglp"]
atlas = ExtResource("5_83b8i")
region = Rect2(0, 0, 42, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_2jqmi"]
atlas = ExtResource("5_83b8i")
region = Rect2(44, 0, 42, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_76dd6"]
atlas = ExtResource("5_83b8i")
region = Rect2(88, 0, 42, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_8kh30"]
atlas = ExtResource("5_83b8i")
region = Rect2(132, 0, 42, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_bn484"]
atlas = ExtResource("5_83b8i")
region = Rect2(176, 0, 42, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_2g2au"]
atlas = ExtResource("5_83b8i")
region = Rect2(220, 0, 42, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_f7v0i"]
atlas = ExtResource("5_83b8i")
region = Rect2(264, 0, 42, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_3psi0"]
atlas = ExtResource("5_83b8i")
region = Rect2(308, 0, 42, 25)

[sub_resource type="SpriteFrames" id="SpriteFrames_bbil5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_ql52o")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iyglp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2jqmi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_76dd6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8kh30")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bn484")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2g2au")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f7v0i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3psi0")
}],
"loop": true,
"name": &"end",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_revc6")
}],
"loop": true,
"name": &"left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_iunxu")
}],
"loop": true,
"name": &"right",
"speed": 5.0
}]

[node name="GAMEOVER" type="AnimationPlayer"]
libraries = {
"": SubResource("AnimationLibrary_77dto")
}
script = ExtResource("1_sa2b1")

[node name="HP1" type="AnimatedSprite2D" parent="."]
position = Vector2(45, 40)
scale = Vector2(0.4, 0.4)
sprite_frames = SubResource("SpriteFrames_b4x3l")

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_6rr1y")
volume_db = 10.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(560, 565)
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_bbil5")
frame_progress = 0.880654

[node name="Label" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -414.0
offset_top = 150.0
offset_right = 414.0
offset_bottom = 190.0
grow_horizontal = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("5_mpcdv")
theme_override_font_sizes/font_size = 30

[node name="Label2" type="Label" parent="."]
modulate = Color(1, 0.952941, 1, 1)
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 828.0
offset_bottom = 20.0
grow_vertical = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("5_mpcdv")
theme_override_font_sizes/font_size = 30
text = "               "

[node name="Label3" type="Label" parent="."]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -828.0
offset_top = -20.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("5_mpcdv")
theme_override_font_sizes/font_size = 30
text = "               "
horizontal_alignment = 2

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_6gwty")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="Music2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_hn6vm")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
